Updated Lichess Development Onboarding (markdown)